Added basic, non-responsive alignment and styling to header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua S. Garrett Portfolio</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
@@ -22,12 +23,13 @@
                 <li>
                     <a href="#contact.html">Contact</a>
                 </li>
-            </ul>>
+            </ul>
         </nav>
     </header>
     <main>
-        <h2 id="main-primary">Joshua S. Garrett</h2>
-        <h3 id="main-secondary">Web Developer, Programmer</h3>
+        <h2 id="main-primary">Joshua Garrett</h2>
+        <h3 id="main-secondary">I'm a software developer out of <span class="city">Columbus, Ohio</span>,</h3>
+        <h3>with a background in financial services.</h3>
         <button id="main-btn-work">View My Work</button>
     </main>
     <footer>
