Added basic styling and alignment to main section

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
         </nav>
     </header>
     <main>
-        <h2 id="main-primary">Joshua Garrett</h2>
-        <h3 id="main-secondary">I'm a software developer out of <span class="city">Columbus, Ohio</span>,</h3>
-        <h3>with a background in financial services.</h3>
+        <div>
+            <h2 id="main-primary">Joshua S. <span class="accent">Garrett</span></h2>
+        </div>
+        <div>
+            <h3 id="main-secondary">I'm a software developer out of <span class="city">Columbus, Ohio</span>,
+            with a background in financial services.</h3>
+        </div>
         <button id="main-btn-work">View My Work</button>
     </main>
     <footer>
