--- a/index.html
+++ b/index.html
@@ -27,21 +27,23 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h2 id="main-primary">Joshua S. <span class="accent">Garrett</span></h2>
-        </div>
-        <div>
-            <h3 id="main-secondary">I'm a software developer out of <span class="city">Columbus, Ohio</span>,
-            with a background in financial services.</h3>
-        </div>
-        <button id="main-btn-work">View My Work</button>
+        <section id="main-content">
+            <div>
+                <h2 id="main-primary">Joshua S. <span class="accent">Garrett</span></h2>
+            </div>
+            <div>
+                <h3 id="main-secondary">I'm a software developer out of <span class="city">Columbus, Ohio</span>,
+                with a background in financial services.</h3>
+            </div>
+            <button id="main-btn-work">View My Work</button>
+        </section>
     </main>
     <footer>
         <ul id="footer-iconbar">
-            <li>GitHub</li>
-            <li>LinkedIn</li>
-            <li>Handshake</li>
-            <li>Indeed</li>
+            <li><a href="#GitHub">GitHub</a></li>
+            <li><a href="#LinkedIn">LinkedIn</a></li>
+            <li><a href="#Indeed">Indeed</a></li>
+            <li><a href="#Handshake">Handshake</a></li>
          </ul>
     </footer>
 </body>
