Altered color palette of home page to include four different colors and tones

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section id="main-content">
             <div>
-                <h2 id="main-primary">Joshua S. <span class="accent">Garrett</span></h2>
+                <h2 id="main-primary"><span class="accent">Joshua S. Garrett</span></h2>
             </div>
             <div>
                 <h3 id="main-secondary">I'm a software developer out of <span class="city">Columbus, Ohio</span>,
