Added basic contact overlay

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
             <button id="main-btn-work">View My Work</button>
         </section>
     </main>
+    <div id="contact-overlay">
+        <div id="contact-card" class="card">
+            <div id="card-body">
+                <img id="contact-portrait" src="./images/portrait.jpg">
+                <div>
+                    <p><span class="accent">Phone: </span>614-599-6997</p>
+                    <p><span class="accent">Email: </span>joshgarrett22@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <ul id="footer-iconbar">
             <li><a href="#GitHub">GitHub</a></li>
@@ -46,5 +57,6 @@
             <li><a href="#Handshake">Handshake</a></li>
          </ul>
     </footer>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
